2001-10-20  Jeff Freedman  <jeff@amy.nerble.net>

	* ucinternal.cc:  Major 'global flag' kludge for SI/Monk Isle endlessly 
	looping Usecode 
	* gamewin.cc: Emulate_cacheout() terminates scripts.
	* usecode/ucsched.h (public): Purge() terminates scripts for
	objs. that are too far away.

2001-10-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* game.cc: clear screen on 'return to menu'

2001-10-21  Max Horn  <max@quendi.de>

	* Removed all files from macosx/ except exult.icns - we don't need them anymore

2001-10-20  Jeff Freedman  <jeff@amy.nerble.net>

	* schedule.cc (public): Better testing for occupied chair.

	* actions.cc,paths.cc:  Changed interface; changed pathfinder to
	use correct test for being blocked.

2001-10-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* barge.cc: barges no longer pick up eggs

2001-10-20  Jeff Freedman  <jeff@amy.nerble.net>

	* combat.cc (Combat_schedule): Camera actor should never give up.
	* keyactions.cc: HOME should center around 'camera_actor'.

	* schedule.cc (Schedule): Longer delays for 'street maintenance'
	to avoid slowdowns.

2001-10-19  Jeff Freedman  <jeff@amy.nerble.net>

	* actions.cc (If_else_path_actor_action): Reset speed after being
	blocked.
	* usecode/intrinsics.cc: Return 'fake' schedule if walking on a
	path.  Fixes Fawn Trial bug where companions don't show up and
	game slows down.

2001-10-18  Jeff Freedman  <jeff@amy.nerble.net>

	* sigame.cc (SI_Game): Add patches to remove 'bad' egg and
	carpets.
	* objs/mappatch.cc, gamewin.cc:  Map patches.

2001-10-17  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Special case:  Magebane vs Vasculio.

	* shapes/monstinf.h (public): Immunity, vulnerability.
	* shapes/shapeinf.h: Damage_type.
	
	* objs/contain.cc (Container_game_object): Fixed dumb goof I made
	when I added the weight check.
	* actors.cc: Don't let Avatar die more than once, or let party be
	hurt if Avatar is dead.
